--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "translink-pwa",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "repository": "git@github.com:mmckeaveney/translink-pwa.git",
   "author": "Martin McKeaveney <martin@squarefoot.com>",
   "license": "MIT",
   "scripts": {
     "dev": "parcel index.html",
-    "build": "parcel build index.html"
+    "build:prod": "parcel build index.html"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.10.3"
+    "parcel-bundler": "^1.11.0",
+    "typescript": "^3.3.3333"
   }
 }
