--- a/package.json
+++ b/package.json
@@ -6,12 +6,26 @@
   "author": "Martin McKeaveney <martin@squarefoot.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel index.html",
-    "build:prod": "parcel build index.html"
+    "start": "node server/index.js",
+    "dev": "node server/index.js",
+    "build": "webpack"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "node-fetch": "^2.3.0",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.11.0",
+    "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "sass": "^1.17.2",
-    "typescript": "^3.3.3333"
+    "script-ext-html-webpack-plugin": "^2.1.3",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-middleware": "^3.6.1",
+    "workbox-webpack-plugin": "^4.1.1"
   }
 }
