--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "node server/index.js",
     "dev": "node server/index.js",
-    "build": "webpack"
+    "build": "npm run clean && webpack",
+    "clean": "rm -rf dist/"
   },
   "dependencies": {
     "express": "^4.16.4",
@@ -16,6 +17,7 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
