--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node server/index.js",
-    "dev": "node server/index.js",
+    "dev": "NODE_ENV=development node server/index.js",
     "build": "npm run clean && webpack",
     "clean": "rm -rf dist/"
   },
