--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,38 @@
 {
+  "short_name": "Translink",
   "name": "Translink PWA",
-  "short_name": "Translink PWA",
-  "icons": [{
-    "src": "assets/icons/icon-128x128.png",
+  "icons": [
+    {
+      "src": "assets/translink-pwa-icon-128.png",
       "sizes": "128x128",
       "type": "image/png"
-    }, {
-      "src": "assets/icons/icon-144x144.png",
+    },
+    {
+      "src": "assets/translink-pwa-icon-144.png",
       "sizes": "144x144",
       "type": "image/png"
-    }, {
-      "src": "assets/icons/icon-152x152.png",
+    },
+    {
+      "src": "assets/translink-pwa-icon-152.png",
       "sizes": "152x152",
       "type": "image/png"
-    }, {
-      "src": "assets/icons/icon-192x192.png",
+    },
+    {
+      "src": "assets/translink-pwa-icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
-    }, {
-      "src": "assets/icons/icon-256x256.png",
+    },
+    {
+      "src": "assets/translink-pwa-icon-256.png",
       "sizes": "256x256",
       "type": "image/png"
-    }],
+    },
+    {
+      "src": "assets/translink-pwa-icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
   "start_url": "/",
   "display": "standalone",
   "background_color": "#3E4EB8",
