--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
+    "aws-serverless-express": "^3.3.5",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.1",
     "css-loader": "^2.1.1",
