--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "copy-webpack-plugin": "^5.0.1",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.5.0",
     "sass": "^1.17.2",
     "script-ext-html-webpack-plugin": "^2.1.3",
     "serverless": "^1.39.1",
     "serverless-offline": "^4.9.2",
+    "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
